[gd_scene load_steps=58 format=3 uid="uid://cxbsi15l23riy"]

[ext_resource type="Script" path="res://scripts/skele/Skeleme.gd" id="1_r3vus"]
[ext_resource type="Texture2D" uid="uid://cc4ntxnfludnq" path="res://characters/skele.png" id="2_hm4qp"]
[ext_resource type="Script" path="res://scenes/Chasing.gd" id="4_3mcwj"]
[ext_resource type="PackedScene" uid="uid://osj7k30503uu" path="res://scenes/enemy ai/raycasting.tscn" id="4_n1pmy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yr5ho"]
radius = 4.00025
height = 12.0

[sub_resource type="Animation" id="Animation_0sr31"]
resource_name = "Attack"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [78, 79, 80, 81, 82, 83]
}

[sub_resource type="Animation" id="Animation_tr17k"]
resource_name = "Attack_left"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [89, 88, 87, 86, 85, 84]
}

[sub_resource type="Animation" id="Animation_f6haa"]
resource_name = "Attack_right"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [90, 91, 92, 93, 94, 95]
}

[sub_resource type="Animation" id="Animation_ooytc"]
resource_name = "Attack_up"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [102, 103, 104, 105, 106, 107]
}

[sub_resource type="Animation" id="Animation_84erw"]
resource_name = "Death"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [149, 148, 147, 146, 145]
}

[sub_resource type="Animation" id="Animation_rqtfn"]
resource_name = "Death_2"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [150, 151, 152, 153, 154]
}

[sub_resource type="Animation" id="Animation_w1y0p"]
resource_name = "Death_back"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [162, 163, 164, 165, 166]
}

[sub_resource type="Animation" id="Animation_txbjc"]
resource_name = "Head_relocate"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [114, 115, 116]
}

[sub_resource type="Animation" id="Animation_ll1hc"]
resource_name = "Head_relocate_2"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [126, 127, 128]
}

[sub_resource type="Animation" id="Animation_qx5sn"]
resource_name = "Head_relocate_up"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [138, 139, 140]
}

[sub_resource type="Animation" id="Animation_es6oo"]
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_vpskd"]
resource_name = "Walk"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_imhta"]
resource_name = "Walk_left"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [53, 52, 51, 50, 49, 48]
}

[sub_resource type="Animation" id="Animation_v8clk"]
resource_name = "Walk_right"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [54, 55, 56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_u53wq"]
resource_name = "Walk_up"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [66, 67, 68, 69, 70, 71]
}

[sub_resource type="Animation" id="Animation_jpem4"]
resource_name = "idle"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_wqhrp"]
resource_name = "idle_left"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 16, 15, 14, 13, 12]
}

[sub_resource type="Animation" id="Animation_fb0l4"]
resource_name = "idel_right"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_1wfuu"]
resource_name = "idle_up"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7d0e"]
_data = {
"Attack": SubResource("Animation_0sr31"),
"Attack_left": SubResource("Animation_tr17k"),
"Attack_right": SubResource("Animation_f6haa"),
"Attack_up": SubResource("Animation_ooytc"),
"Death": SubResource("Animation_84erw"),
"Death_2": SubResource("Animation_rqtfn"),
"Death_back": SubResource("Animation_w1y0p"),
"Head_relocate": SubResource("Animation_txbjc"),
"Head_relocate_2": SubResource("Animation_ll1hc"),
"Head_relocate_up": SubResource("Animation_qx5sn"),
"RESET": SubResource("Animation_es6oo"),
"Walk": SubResource("Animation_vpskd"),
"Walk_left": SubResource("Animation_imhta"),
"Walk_right": SubResource("Animation_v8clk"),
"Walk_up": SubResource("Animation_u53wq"),
"idle": SubResource("Animation_jpem4"),
"idle_left": SubResource("Animation_wqhrp"),
"idle_right": SubResource("Animation_fb0l4"),
"idle_up": SubResource("Animation_1wfuu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s1djg"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i3jjr"]
animation = &"Attack_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bagg8"]
animation = &"Attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lc5ju"]
animation = &"Attack_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_llxc3"]
blend_point_0/node = SubResource("AnimationNodeAnimation_s1djg")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_i3jjr")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_bagg8")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_lc5ju")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yqdyl"]
animation = &"Death_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5ycxa"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_miap0"]
animation = &"Death_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2tj12"]
animation = &"Death_2"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_lnbtv"]
blend_point_0/node = SubResource("AnimationNodeAnimation_yqdyl")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_5ycxa")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_miap0")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_2tj12")
blend_point_3/pos = Vector2(0, 1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0yc13"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ckexc"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_von8n"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_btvke"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_5dokd"]
blend_point_0/node = SubResource("AnimationNodeAnimation_0yc13")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_ckexc")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_von8n")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_btvke")
blend_point_3/pos = Vector2(0, 1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_okhqm"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l4ro4"]
animation = &"Walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wp2fn"]
animation = &"Walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d848n"]
animation = &"Walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yo7fj"]
animation = &"Walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1ph4j"]
blend_point_0/node = SubResource("AnimationNodeAnimation_okhqm")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_l4ro4")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_wp2fn")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_d848n")
blend_point_3/pos = Vector2(1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_yo7fj")
blend_point_4/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kx5ki"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dffcl"]
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qi4c1"]
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t5ray"]
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rpsyi"]
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7drck"]
switch_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eugl1"]
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bl0x5"]
advance_condition = &"dead"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_s257m"]
states/attack/node = SubResource("AnimationNodeBlendSpace2D_llxc3")
states/attack/position = Vector2(622, -46)
states/death/node = SubResource("AnimationNodeBlendSpace2D_lnbtv")
states/death/position = Vector2(547, 91)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_5dokd")
states/idle/position = Vector2(334, 105)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_1ph4j")
states/walk/position = Vector2(686, 239)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_kx5ki"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_dffcl"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_qi4c1"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_t5ray"), "attack", "walk", SubResource("AnimationNodeStateMachineTransition_rpsyi"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_7drck"), "walk", "attack", SubResource("AnimationNodeStateMachineTransition_eugl1"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_bl0x5")]
graph_offset = Vector2(162.613, -73.2825)

[sub_resource type="CircleShape2D" id="CircleShape2D_h5yte"]
radius = 7.51665

[sub_resource type="CircleShape2D" id="CircleShape2D_r7bfg"]
radius = 114.018

[node name="Skeleme" type="CharacterBody2D"]
z_index = 2
scale = Vector2(2, 2)
script = ExtResource("1_r3vus")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("2_hm4qp")
hframes = 12
vframes = 14
frame = 18

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
rotation = 1.57105
shape = SubResource("CapsuleShape2D_yr5ho")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s7d0e")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_s257m")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/dead = false
parameters/conditions/idle = false
parameters/conditions/is_moving = false
parameters/attack/blend_position = Vector2(-0.200701, 0.00484574)
parameters/death/blend_position = Vector2(-0.00438213, -0.00440526)
parameters/idle/blend_position = Vector2(-0.00438213, 0.140529)
parameters/walk/blend_position = Vector2(-0.000876427, -0.00484574)

[node name="attackarea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackarea"]
shape = SubResource("CircleShape2D_h5yte")

[node name="AreaDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetection"]
shape = SubResource("CircleShape2D_r7bfg")

[node name="Timer" type="Timer" parent="."]

[node name="Node" parent="." instance=ExtResource("4_n1pmy")]
scale = Vector2(0.7, 0.7)

[node name="Chasing" type="Node2D" parent="."]
script = ExtResource("4_3mcwj")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="attackarea" to="." method="_on_attackarea_body_entered"]
[connection signal="body_exited" from="attackarea" to="." method="_on_attackarea_body_exited"]
[connection signal="body_entered" from="AreaDetection" to="." method="_on_area_detection_body_entered"]
[connection signal="body_exited" from="AreaDetection" to="." method="_on_area_detection_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
